mux-compiler/tests/snapshots/lexer_integration__file_lexer__test_std_imports.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "Test std library imports - separate tests to avoid conflicts",
        ),
        span: Span {
            row_start: 1,
            row_end: Some(
                1,
            ),
            col_start: 1,
            col_end: Some(
                64,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 1,
            row_end: None,
            col_start: 64,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 2,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "Test 1: import std - access via std.math.sin(), std.io.print()",
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 1,
            col_end: Some(
                66,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 3,
            row_end: None,
            col_start: 66,
            col_end: None,
        },
    },
    Token {
        token_type: Import,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 1,
            col_end: Some(
                7,
            ),
        },
    },
    Token {
        token_type: Id(
            "std",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 8,
            col_end: Some(
                11,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 4,
            row_end: None,
            col_start: 11,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 5,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "float",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: Id(
            "result",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 7,
            col_end: Some(
                13,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 14,
            col_end: Some(
                15,
            ),
        },
    },
    Token {
        token_type: Id(
            "std",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 16,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 19,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "math",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 20,
            col_end: Some(
                24,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 24,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "pow",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 25,
            col_end: Some(
                28,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 28,
            col_end: None,
        },
    },
    Token {
        token_type: Float(
            2.0,
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 29,
            col_end: Some(
                32,
            ),
        },
    },
    Token {
        token_type: Comma,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 32,
            col_end: None,
        },
    },
    Token {
        token_type: Float(
            3.0,
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 34,
            col_end: Some(
                37,
            ),
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 37,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 38,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 6,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "Test 1: std.math.pow(2.0, 3.0) = ",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 7,
            col_end: Some(
                42,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 43,
            col_end: Some(
                44,
            ),
        },
    },
    Token {
        token_type: Id(
            "result",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 45,
            col_end: Some(
                51,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 51,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 52,
            col_end: Some(
                61,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 61,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 62,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 63,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 64,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 6,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "Test 1 passed!",
        ),
        span: Span {
            row_start: 8,
            row_end: Some(
                8,
            ),
            col_start: 7,
            col_end: Some(
                23,
            ),
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 23,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 24,
            col_end: None,
        },
    },
]
